# gamevote-api-go/docs/swagger.json
@@ -19,6 +19,7 @@
                     "drinks"
                 ],
                 "summary": "Get preset drinks",
+                "operationId": "GetDrinkTypes",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -43,6 +44,7 @@
                     "drinks"
                 ],
                 "summary": "Add custom drink preset",
+                "operationId": "PostDrinkType",
                 "parameters": [
                     {
                         "description": "Drink Type Details",
@@ -74,6 +76,7 @@
                     "games"
                 ],
                 "summary": "Search games",
+                "operationId": "SearchGames",
                 "parameters": [
                     {
                         "type": "string",
@@ -106,6 +109,7 @@
                     "parties"
                 ],
                 "summary": "Get all parties",
+                "operationId": "GetParties",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -130,6 +134,7 @@
                     "parties"
                 ],
                 "summary": "Create a new party",
+                "operationId": "CreateParty",
                 "parameters": [
                     {
                         "description": "Party details",
@@ -161,6 +166,7 @@
                     "parties"
                 ],
                 "summary": "Get a party",
+                "operationId": "GetParty",
                 "parameters": [
                     {
                         "type": "string",
@@ -191,6 +197,7 @@
                     "parties"
                 ],
                 "summary": "Patch a party",
+                "operationId": "PatchParty",
                 "parameters": [
                     {
                         "type": "string",
@@ -232,6 +239,7 @@
                     "parties"
                 ],
                 "summary": "Add an attendee",
+                "operationId": "PostAttendee",
                 "parameters": [
                     {
                         "type": "string",
@@ -267,6 +275,7 @@
                     "parties"
                 ],
                 "summary": "Delete an attendee",
+                "operationId": "DeleteAttendee",
                 "parameters": [
                     {
                         "type": "string",
@@ -303,6 +312,7 @@
                     "parties"
                 ],
                 "summary": "Add a beer",
+                "operationId": "PostBeer",
                 "parameters": [
                     {
                         "type": "string",
@@ -341,6 +351,7 @@
                     "parties"
                 ],
                 "summary": "Add an option",
+                "operationId": "PostOption",
                 "parameters": [
                     {
                         "type": "string",
@@ -376,6 +387,7 @@
                     "parties"
                 ],
                 "summary": "Delete an option",
+                "operationId": "DeleteOption",
                 "parameters": [
                     {
                         "type": "string",
@@ -409,6 +421,7 @@
                     "parties"
                 ],
                 "summary": "SSE stream for a party",
+                "operationId": "StreamParty",
                 "parameters": [
                     {
                         "type": "string",
@@ -494,6 +507,7 @@
                     "users"
                 ],
                 "summary": "Get all users",
+                "operationId": "GetUsers",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -518,6 +532,7 @@
                     "users"
                 ],
                 "summary": "Login or Register a User",
+                "operationId": "Login",
                 "parameters": [
                     {
                         "description": "Login Request",
@@ -534,6 +549,42 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/service.UserDTO"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{username}": {
+            "get": {
+                "description": "Check if a user exists in the database by username",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Validate if a user exists",
+                "operationId": "ValidateUser",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/service.UserDTO"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
                         }
                     }
                 }
